상품 주문 1차 완료

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Created by .ignore support plugin (hsz.mobi)
 ### JupyterNotebooks template
-# gitignore template for Jupyter Notebooks
+# gitignore templates for Jupyter Notebooks
 # website: http://jupyter.org/
 
 .idea
@@ -46,7 +46,7 @@ share/python-wheels/
 MANIFEST
 
 # PyInstaller
-#  Usually these files are written by a python script from a template
+#  Usually these files are written by a python script from a templates
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
